--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>demo</title>
+  <script src="https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/qs@6.10.2/dist/qs.js"></script>
 </head>
 <body>
-  <div>html 模板</div>
+  <div>
+    <input id="fileInput" type="file" multiple/>
+  </div>
+  <script>
+    (async function () {
+      // 请求方式 params
+      const res1 = await axios.get('/api/person/23');
+      console.log(res1, 'response1 --- ');
+      
+      // 请求方式 query
+      const res2 = await axios.get('/api/person/find',  {
+        params: {
+          name: '哈哈哈',
+          age: 28
+        }
+      });
+      console.log(res2, 'response2 --- ');
+
+      // 请求方式 application/x-www-form-urlencoded
+      const res3 = await axios.post('/api/person', Qs.stringify({
+        data: {
+          name: '你好',
+          age: 28
+        },
+      }), {
+        headers: {
+          'content-type': 'application/x-www-form-urlencoded'
+        }
+      });
+      console.log(res3, 'response3 --- ');
+
+      // 请求方式 json
+      const res4 = await axios.post('/api/person/post', {
+        name: '哈喽',
+        age: 28,
+      });
+      console.log(res4, 'response4 --- ');
+
+      // 请求方式 form-data, 用于大文件数据传输
+      const fileInputs = document.querySelector('#fileInput');
+      async function formDataFunc () {
+        const formData = new FormData();
+        formData.set('name', '礼拜二');
+        formData.set('age', 28);
+        formData.set('files1', fileInputs.files[0]);
+        formData.set('files2', fileInputs.files[1]);
+        const res5 = await axios.post('/api/person/files', formData, {
+          headers: {
+            'content-type': 'multipart/form-data'
+          }
+        });
+        console.log(res5, 'response5 --- ');
+      };
+
+      fileInputs.onchange = formDataFunc;
+    })()
+  </script>
 </body>
 </html>
